--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -63,14 +63,17 @@ The P-value is so small (0.000116), that it is unlikely the alcohol consumption 
 ```{r}
 plot(TukeyHSD(model1))
 ```
+
+
 This TukeyHDS plot shows that those who sit in the back drink significantly more than those in the front.
 This plot also shows that those in the back seats drink a much larger quantity of alcohol than those seated in the middle. However, it shows no difference in alcohol consumption between the middle and the front.
 If zero is in the confidence interval that means there is no difference.
-(The confidence interval is the dotted line above zero)
+(The confidence interval is the dotted line above zero.)
 
 
 
 
 ## Conclusions
 
+There is a difference in alcohol consumption and seat position. Those who sit in back drink approximately three times more than those who sit in the middle and front. There isn't a difference in consumption of alcohol between the middle and front.
 
